# RL

./: .gitignore  .travis.yml  ALE.h  ALE.vcxproj  ALE.vcxproj.filters  Agent_DQN.h  CMakeLists.txt  DCNN.h  README.md  RL.h  ale_interface.hpp  mnist.h  rl_main.cpp  tic_tac_toe.h
agents/: SDLKeyboardAgent.cpp
environment/: ale_state.cpp  phosphor_blend.cpp
exp_data/ALE+DQN-HistoryLen5-RewardClip-SingleLife/: log.txt  log.xlsx  log_env.txt
exp_data/ALEW+DQN/: log.txt  log.xlsx  log_agent.txt  log_env.txt
exp_data/MNIST+DQN/: log.txt  log.xlsx  log_agent.txt  log_env.txt
exp_data/TTTW+DQN+Minimax/: log.xlsx  log_env.txt  log_test_agent.txt
exp_data/TTTW+DQN+Minimax/EP100k/: log.txt  log_agent.txt  log_test.txt
exp_data/TTTW+DQN/EP200k/: log.txt  log_agent.txt  log_env.txt  log_test.txt  log_test_agent.txt
exp_data/TTTW+DQN/EP500k/: log.txt  log_test.txt  log_test_agent.txt  log_test_env.txt
games/supported/: Breakout.cpp  SpaceInvaders.cpp
utils/: PerfVar.h  fakeBMP.cpp  image.h  utils.h
